[animation] fixed issue that improving collapse animation added automatic transition for all animation components

--- a/semcore/animation/src/style/animate.shadow.css
+++ b/semcore/animation/src/style/animate.shadow.css
@@ -4,16 +4,19 @@ SAnimation {
   animation-duration: var(--durationFinalize);
   animation-delay: var(--delayFinalize);
   animation-name: var(--keyframesFinalize);
-
+}
+SAnimation[transition-based] {
   transition-timing-function: var(--timingFunction);
   transition-duration: var(--durationFinalize);
   transition-delay: var(--delayFinalize);
 }
+
 SAnimation[visible] {
   animation-duration: var(--durationInitialize);
   animation-delay: var(--delayInitialize);
   animation-name: var(--keyframesInitialize);
-
+}
+SAnimation[visible][transition-based] {
   transition-timing-function: var(--timingFunction);
   transition-duration: var(--durationInitialize);
   transition-delay: var(--delayInitialize);
@@ -24,8 +27,18 @@ SAnimation[visible] {
     animation-timing-function: step-end;
     animation-iteration-count: 1;
   }
+  SAnimation[transition-based] {
+    transition-timing-function: none;
+    transition-duration: none;
+    transition-delay: none;
+  }
   SAnimation[visible] {
     animation-timing-function: step-end;
     animation-iteration-count: 1;
+  }
+  SAnimation[visible][transition-based] {
+    transition-timing-function: none;
+    transition-duration: none;
+    transition-delay: none;
   }
 }
